# conan-sdl2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py  sdl_timer.c
test_package/: CMakeLists.txt  conanfile.py  sdl_timer.c
